--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
 	ext {
 		grailsVersion = "3.0.3"
 		springVersion = "4.1.7.RELEASE"
+		springSessionVersion = '1.0.2.RELEASE'
 	}
 	repositories {
 		mavenLocal()
@@ -53,6 +54,7 @@ dependencies {
 	compile "com.fasterxml.jackson.core:jackson-databind:2.5.4"
 	compile "org.springframework:spring-messaging:${springVersion}"
 	compile "org.springframework:spring-websocket:${springVersion}"
+	compile("org.springframework.session:spring-session:$springSessionVersion")
 	
 	testCompile "org.grails:grails-plugin-testing"
 	
